# XeF4

./: README.md  bot.py  pyproject.toml
src/: commands.py  preprocess-prompt.md
src/plugins/: command.py  mc_conn.py  more_interactions.py  recorder.py
src/plugins/ai_chat/: __init__.py  chat.py  handler.py  utils.py
