[project]
name = "XeF4"
version = "0.2.0"
description = "A comprehensive QQ group bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Minecraft", module_name = "nonebot.adapters.minecraft" }
]
plugins = ["nonebot_plugin_group_config", "nonebot_plugin_follow_withdraw", "nonebot_plugin_analysis_bilibili"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
